--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "homepage": "https://github.com/Bumler/Nearest-Color#readme",
   "devDependencies": {
+    "browser-sync": "^2.26.3",
     "eslint": "^5.16.0",
-    "eslint-config-google": "^0.12.0"
+    "eslint-config-google": "^0.12.0",
+    "gulp": "^4.0.0"
+  },
+  "dependencies": {
+    "gulp-cli": "^2.1.0"
   }
 }
