--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^4.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gulp-cli": "^2.1.0",
     "knockout": "^3.5.0"
   }
